<resources>
    <string name="app_name">Diabye</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_account_tv">CREATE AN ACCOUNT</string>
    <string name="personNameHint">First Name</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="have_an_account_text">Already have an account?</string>
    <string name="login_text">Login</string>

    <string name="enter_name_text">"Enter your name!"</string>
    <string name="enter_pass_text">"Enter your password!"</string>
    <string name="enter_email_text">"Enter your email!"</string>
    <string name="enter_confirm_pass_text">"Enter confirm password!"</string>
    <string name="pass_cofirmpass_dont_match">"Password and confirm password doesn't match!"</string>
    <string name="register_successful">Register is successful!</string>
    <string name="register_unsuccessful">Something went wrong! Try again.</string>

    <string name="login_successful">Login is successful!</string>
    <string name="forgot_pass_text">FORGOT PASSWORD? NO PROBLEM!</string>
    <string name="forgot_pass_info">Enter your email and we will send you a link to reset your password</string>
    <string name="send_pass_text">Send</string>

    <string name="email_sent_text">Email has been sent. You should check out your mailbox.</string>
    <string name="complete_your_profile_text">COMPLETE YOUR PROFILE</string>
    <string name="pens_syringes_text">PENS/SYRINGES</string>
    <string name="pump_text">PUMP</string>
    <string name="therapy_type_text">What kind of therapy do you use?</string>
    <string name="hyperglycemia_and_hypoglycemia_text">Hyperglycemia and hypoglycemia</string>
    <string name="hiper_et_hint">Hiper for ex. 190mg/dL</string>
    <string name="hypo_et_hint">Hypo for ex. 70 mg/dl</string>
    <string name="target_range_low_et_hint">Target range min. value for ex. 90 mg/dL</string>
    <string name="target_range_high_et_hint">Target range max. value for ex. 160 mg/dl</string>
    <string name="submit_text">SUBMIT</string>

    <string name="enter_hypo_text">Enter hypo value!</string>
    <string name="enter_hiper_text">Enter hiper value!</string>
    <string name="enter_range_low_text">Enter minimum value of target range!</string>
    <string name="enter_range_max_text">Enter maximum value of target range!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_portion_text">Enter your portion size</string>
    <string name="add_text">add</string>
    <string name="add_food_text">Add food</string>
    <string name="calories_text">Calories</string>
    <string name="fats_amp_protein_text"><![CDATA[Fats & protein]]></string>
    <string name="carbs_text">Carbs</string>
    <string name="activity_text">Activity</string>
    <string name="pressure_text">Pressure</string>
    <string name="temp_basal_text">Temp. basal</string>
    <string name="corr_insulin_text">Corr. insulin</string>
    <string name="meal_insulin_text">Meal insulin</string>
    <string name="sugar_level_text">Sugar level</string>
    <string name="date_and_time_text">Date and time</string>
    <string name="min_hint">min</string>
    <string name="mm_hg_hint">mm/Hg</string>
    <string name="percentage_hint">%</string>
    <string name="i_u_hint">I.U.</string>
    <string name="mg_dl_hint">mg/dL</string>
    <string name="long_insulin_text">Long insulin</string>
    <string name="diastolic_pressure_text">Dias. pressure</string>
    <string name="systolic_pressure_text">Sys. pressure</string>
    <string name="temp_basal_time_text">Time</string>
    <string name="avg_blood_glucose_text">Avg. blood glucose</string>
    <string name="no_entry_sign">-</string>
    <string name="attention_text">Attention</string>
    <string name="hyper_text">Hyper</string>
    <string name="hypo_text">Hypo</string>
    <string name="bolus_text">Bolus</string>
    <string name="food_text">Food</string>
    <string name="kcal_text">kcal</string>
    <string name="cho_text">CHO</string>
    <string name="fpu_text">FPU</string>
    <string name="add_entry_button_text">add new entry</string>
    <string name="sun_text">SUN</string>
    <string name="mon_text">MON</string>
    <string name="tue_text">TUE</string>
    <string name="wed_text">WED</string>
    <string name="thur_text">THUR</string>
    <string name="fri_text">FRI</string>
    <string name="sat_text">SAT</string>
    <string name="previous_week_text">previous week</string>
    <string name="next_week_text">next week</string>
    <string name="delete_measurement_text">delete measurement</string>
    <string name="no_measurements_this_day_text">No measurements this day</string>
    <string name="home_text">Home</string>
    <string name="history_text">History</string>
    <string name="statistics_text">Statistics</string>
    <string name="settings_text">Settings</string>
    <string name="select_measurement_type">Select measurement type</string>
    <string name="select_time_interval">select time interval</string>
    <string name="avg_blood_sugar_per_day">Avg. blood sugar</string>
    <string name="avg_hyper_per_day">Hypers count</string>
    <string name="avg_hypos_per_day">Hypos count</string>
    <string name="avg_activity_per_day">Avg. activity</string>
    <string name="avg_pressure_text">Avg. pressure</string>
    <string name="no_avg_sugar_text">0 mg/dL</string>
    <string name="no_avg_activity_text">0 min</string>
    <string name="no_avg_pressure_text">0/0 mmHg</string>
    <string name="export_data">Export data</string>
    <string name="change_settings">Change settings</string>
    <string name="logout">Logout</string>
    <string name="select_document_type">Select document type</string>
    <string name="append_blood_sugar">Append blood sugar</string>
    <string name="append_meal_insulin">Append meal insulin</string>
    <string name="append_correct_insulin">Append correctional insulin</string>
    <string name="append_temporary_bolus">Append temporary basal</string>
    <string name="append_long_insulin">Append long insulin</string>
    <string name="append_food_info">Append food info</string>
    <string name="append_activity">Append activity</string>
    <string name="append_pressure">Append pressure</string>
    <string name="exportMeasurement">Export</string>
    <string name="long_dash">—</string>
    <string name="time_txt">time</string>
    <string name="permission_denied_info">You cannot export your measurements if you do not grant the permission to access your documents and files</string>
    <string name="no_pdf_reader_message">Can\'t read pdf file</string>
    <string name="no_csv_reader_info">Can\'t read csv file</string>
    <string name="no_measurements_in_this_time_interval">No measurements in this time interval</string>
    <string name="no_category_selected">No category has been selected</string>
    <string name="change_your_settings">CHANGE YOUR SETTINGS</string>
    <string name="no_measurements">No measurements</string>
    <string name="cancel">Cancel</string>
    <string name="text_20">20</string>
    <string name="delete_food">delete food</string>
    <string name="calendar">calendar</string>
    <string name="select_date">select Date</string>
    <string name="select_time">select Time</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="p">P</string>
    <string name="export">export</string>
    <string name="averages_per_day">Averages per day</string>
    <string name="distribution">Distribution</string>
    <string name="estimated_hba1c">Estimated HbA1c</string>
    <string name="predict_dosage">Predict dosage</string>
</resources>