<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainFragment"
        android:title="@string/home_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/historyFragment"
        android:title="@string/history_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_history_24"/>

    <item
        android:id="@+id/statisticsFragment"
        android:title="@string/statistics_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_timeline_24"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_settings_24"/>

</menu>