<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

      <FrameLayout
          android:id="@+id/headerImageFrameLayout"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/auth_header_image_height"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/gradient"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck" />
      </FrameLayout>

      <TextView
          android:id="@+id/titleLoginTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp"
          android:fontFamily="sans-serif"
          android:text="@string/title_login"
          android:textColor="@color/title_text_color"
          android:textSize="@dimen/title_textSize"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/headerImageFrameLayout" />

      <EditText
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="35dp"
          android:layout_marginEnd="16dp"
          android:autofillHints="emailAddress"
          android:background="@drawable/custom_input"
          android:drawableStart="@drawable/custom_email_icon"
          android:drawablePadding="10dp"
          android:hint="@string/et_hint_email_id"
          android:inputType="textEmailAddress"
          android:padding="@dimen/et_padding"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:textSize="@dimen/et_textSize"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/titleLoginTextView"
          tools:ignore="TextContrastCheck" />

      <EditText
          android:id="@+id/passwordEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:autofillHints="password"
          android:background="@drawable/custom_input"
          android:drawableStart="@drawable/custom_lock_icon"
          android:drawablePadding="10dp"
          android:hint="@string/et_hint_password"
          android:inputType="textPassword"
          android:padding="@dimen/et_padding"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:textSize="@dimen/et_textSize"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/emailEditText"
          tools:ignore="TextContrastCheck" />

      <TextView
          android:id="@+id/forgotPassTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:background="?attr/selectableItemBackground"
          android:padding="@dimen/clickable_text_view_padding"
          android:text="@string/lbl_forgot_password"
          android:textSize="@dimen/forgot_password_textSize"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/passwordEditText"
          tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="16dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/button_background"
          android:gravity="center"
          android:paddingTop="@dimen/btn_padding"
          android:paddingBottom="@dimen/btn_padding"
          android:text="@string/btn_lbl_login"
          android:textColor="@android:color/white"
          android:textSize="@dimen/btn_textSize"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/forgotPassTextView"
          tools:ignore="TextContrastCheck" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="8dp"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/loginButton">

        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/lbl_text_view_textSize"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textSize="@dimen/lbl_text_view_textSize"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
      </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <ProgressBar
      android:id="@+id/loginProgressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminateTint="@color/main_blue"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>